tests/valid_seq/func_int_bug.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%
%
% This test was originally called func_int_bug_main.
%

:- module func_int_bug.
:- implementation.
:- import_module func_int_bug_helper_1.
